--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="container">
+    <h1>Casa de Câmbio</h1>
+    <form>
+      <label>Digite a moeda:</label>
+      <input id="currency" type="text" placeholder="USD" />
+      <button id="button">Pesquisar</button>
+    </form>
+    <table>
+      <thead>
+        <tr id="thead"></tr>
+      </thead>
+      <tbody>
+        <tr id="tbody"></tr>
+      </tbody>
+    </table>
+  </div>
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
